@@ -1,0 +1,5 @@
+Simplifies the creation of Excel .xlsx files by providing a high level
+interface to writing, styling and editing worksheets. Through the use
+of 'Rcpp', read/write times are comparable to the 'xlsx' and
+'XLConnect' packages with the added benefit of removing the dependency
+on Java.
