@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 13:48:46 brook Exp $
+
+SHA1 (R/openxlsx_4.1.0.1.tar.gz) = 89d19396ccfeb8acc44a092dc5636e460003c20c
+RMD160 (R/openxlsx_4.1.0.1.tar.gz) = 9dfd3db1a83f9d9bfae5d28c18c7f8f61a783295
+SHA512 (R/openxlsx_4.1.0.1.tar.gz) = 6f108d5ec654e005fc21ceeb829e22bbf8717eef6aa36d8f13baf7165da9c4c641acb1bda6471647255043b93eff3f1793562e7b8bc3135d49f71806654f9641
+Size (R/openxlsx_4.1.0.1.tar.gz) = 1458738 bytes
